@@ -22,6 +22,7 @@
  <gentext key="scalar-or-series" text="scalare o serie"/>
  <gentext key="series-or-list" text="serie o lista"/>
  <gentext key="anyfloat-or-list" text="scalare, serie, matrice o lista"/>
+ <gentext key="list-or-string" text="lista o stringa"/>
  <gentext key="asinput"       text="stesso tipo dell'argomento"/>
  <gentext key="scalar"        text="scalare"/>
  <gentext key="pscalar"       text="scalare tra 0 e 1"/>
