@@ -862,9 +862,6 @@ static void follow_if_link (GtkWidget *tview, GtkTextIter *iter, gpointer p)
 	    } else {
 		int role = object_get_int(tview, "role");
 
-		fprintf(stderr, "follow_if_link: page=%d, role=%d, xref=%d\n",
-			page, role, xref);
-
 		if (role == FUNCS_HELP) {
 		    if (xref) {
 			plain_text_cmdref(p, page, NULL);
