@@ -1758,6 +1758,11 @@ int dataset_drop_listed_variables (int *list, double ***pZ,
     int lastvar[2];
     int err = 0;
 
+    if (pdinfo->n == 0) {
+	strcpy(gretl_errmsg, _("No dataset is in place"));
+	return E_DATA;
+    }
+
     if (list == NULL) {
 	/* signal to drop internal "$" variables */
 	dlist = make_dollar_list(pdinfo, &err);
